Fix for large world clock + am/pm overlap
Closes #869

--- a/src/styles/features/time.css
+++ b/src/styles/features/time.css
@@ -35,6 +35,11 @@
     gap: 4em;
 }
 
+/* gap scales dynamically depending on clock size/am-pm */
+#time-container:has(h1[data-ampm-label]) {
+    column-gap: calc(var(--clock-size) * 6);
+}
+
 .digital {
     position: relative;
     margin: 0;
